--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="title_activity_description">DescriptionActivity</string>
     <string name="title_activity_attractions">AttractionsActivity</string>
     <string name="title_activity_place_detail">Details</string>
+    <string name="title_activity_street_view">StreetViewActivity</string>
 
 </resources>
