Added up button Modified activity titles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,13 +7,13 @@
     <string name="city">City</string>
     <string name="i_want_to_visit">I want to visit:</string>
     <string name="go">Go</string>
-    <string name="title_activity_location_preview">LocationPreviewActivity</string>
-    <string name="title_activity_images">ImagesActivity</string>
-    <string name="title_activity_description">DescriptionActivity</string>
-    <string name="title_activity_attractions">AttractionsActivity</string>
+    <string name="title_activity_location_preview">Summary</string>
+    <string name="title_activity_images">Pictures</string>
+    <string name="title_activity_description">Description</string>
+    <string name="title_activity_attractions">Attractions</string>
     <string name="title_activity_place_detail">Details</string>
-    <string name="title_activity_street_view">StreetViewActivity</string>
-    <string name="title_activity_videos">VideosActivity</string>
+    <string name="title_activity_street_view">Street View</string>
+    <string name="title_activity_videos">Videos</string>
     <string name="cant_load_attractions">Could not load attractions</string>
     <string name="cant_load_videos">Could not load videos</string>
     <string name="try_again">TRY AGAIN</string>
