In PlaceDetails screen add title "Reviews"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_map">Map</string>
     <string name="maps_not_available">Could not display the map.</string>
+    <string name="card_title_reviews">REVIEWS</string>
 
 </resources>
