--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,6 @@
     <string name="maps_not_available">Could not display the map.</string>
     <string name="card_title_reviews">REVIEWS</string>
     <string name="no_favorites">No favorites yet!</string>
+    <string name="logo">Discover beautiful places to visit</string>
 
 </resources>
