--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="go">Go</string>
     <string name="title_activity_location_preview">Summary</string>
     <string name="title_activity_images">Pictures</string>
+
     <string name="title_activity_description">Description</string>
     <string name="title_activity_attractions">Attractions</string>
     <string name="title_activity_place_detail">Details</string>
@@ -34,6 +35,9 @@
     <string name="no_favorites">No favorites yet!</string>
     <string name="logo">Discover beautiful places to visit</string>
     <string name="ok">OK</string>
-    <string name="about_text"><![CDATA[<b>Explore</b> is a simple app that allows you quickly discover beautiful places to visit. <br /> <br />Don\'t know where to spend your next vacation? Use <b>Explore</b> to find out!]]></string>
+    <string name="about_text"><![CDATA[<b>Explore</b> is a simple app that helps you discover beautiful places to visit. <br /> <br />Don\'t know where to spend your next vacation? Use <b>Explore</b> to find out!]]></string>
+
+    <string name="maps_debug">AIzaSyBsBWRCsTwJUHyHloJE5kqTJIqYPRQLvZA</string>
+    <string name="maps_release">AIzaSyCmCYpwGnQIOtr5-pYGUDkpivaoOZqCQfE</string>
 
 </resources>
